chore: fix models
